--- a/Admissions.html
+++ b/Admissions.html
@@ -58,7 +58,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/s">bootstrap theme</a></section><section class="mbr-section content5 cid-rZOGU8MOZ4 mbr-parallax-background" id="content5-23">
+<section class="engine"><a href="https://mobirise.info/t">amp template</a></section><section class="mbr-section content5 cid-rZOGU8MOZ4 mbr-parallax-background" id="content5-23">
 
     
 
