--- a/Infra.html
+++ b/Infra.html
@@ -59,7 +59,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/a">online web builder</a></section><section class="mbr-section content5 cid-rZJalRRoNs mbr-parallax-background" id="content5-k">
+<section class="engine"><a href="https://mobirise.info/f">simple web builder</a></section><section class="mbr-section content5 cid-rZJalRRoNs mbr-parallax-background" id="content5-k">
 
     
 
@@ -88,34 +88,34 @@
     <div class="container">
         <h3 class="mbr-section-title align-center mbr-fonts-style display-2">Computer Lab</h3>
         
-        <div class="row mbr-gallery" data-toggle="modal" data-target="#s0WbLqJcli">
+        <div class="row mbr-gallery" data-toggle="modal" data-target="#s0WcZzmcxp">
             <div class="col-sm-6 col-md-4 col-lg-3 item gallery-image">
                 <div class="item-wrapper">
-                    <img class="w-100" src="assets/images/mbr-510x340.jpg" alt="" data-slide-to="0" title="" data-target="#s0WbLqJZSZ">
+                    <img class="w-100" src="assets/images/mbr-510x340.jpg" alt="" data-slide-to="0" title="" data-target="#s0WcZzmsTB">
                 </div>
             </div>
             <div class="col-sm-6 col-md-4 col-lg-3 item gallery-image">
                 <div class="item-wrapper">
-                    <img class="w-100" src="assets/images/mbr-510x287.jpg" alt="" data-slide-to="1" title="" data-target="#s0WbLqJZSZ">
+                    <img class="w-100" src="assets/images/mbr-510x287.jpg" alt="" data-slide-to="1" title="" data-target="#s0WcZzmsTB">
                 </div>
             </div>
             <div class="col-sm-6 col-md-4 col-lg-3 item gallery-image">
                 <div class="item-wrapper">
-                    <img class="w-100" src="assets/images/parijnan-vidyalay-computer-laboratory-510x383.jpeg" alt="" data-slide-to="2" title="" data-target="#s0WbLqJZSZ">
+                    <img class="w-100" src="assets/images/parijnan-vidyalay-computer-laboratory-510x383.jpeg" alt="" data-slide-to="2" title="" data-target="#s0WcZzmsTB">
                 </div>
             </div>
             <div class="col-sm-6 col-md-4 col-lg-3 item gallery-image">
                 <div class="item-wrapper">
-                    <img class="w-100" src="assets/images/mbr-510x288.jpg" alt="" data-slide-to="3" title="" data-target="#s0WbLqJZSZ">
+                    <img class="w-100" src="assets/images/mbr-510x288.jpg" alt="" data-slide-to="3" title="" data-target="#s0WcZzmsTB">
                 </div>
             </div>
         </div>
 
-        <div class="modal mbr-slider fade" tabindex="-1" role="dialog" aria-hidden="true" id="s0WbLqJcli">
+        <div class="modal mbr-slider fade" tabindex="-1" role="dialog" aria-hidden="true" id="s0WcZzmcxp">
             <div class="modal-dialog" role="document">
                 <div class="modal-content">
                     <div class="modal-body">
-                        <div class="carousel slide" data-ride="carousel" id="s0WbLqJZSZ">
+                        <div class="carousel slide" data-ride="carousel" id="s0WcZzmsTB">
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
                                     <img class="d-block w-100" src="assets/images/mbr-510x340.jpg" alt="">
@@ -131,18 +131,18 @@
                                 </div>
                             </div>
                             <ol class="carousel-indicators">
-                                <li data-slide-to="0" class="active" data-target="#s0WbLqJZSZ"></li>
-                                <li data-slide-to="1" data-target="#s0WbLqJZSZ"></li>
-                                <li data-slide-to="2" data-target="#s0WbLqJZSZ"></li>
-                                <li data-slide-to="3" data-target="#s0WbLqJZSZ"></li>
+                                <li data-slide-to="0" class="active" data-target="#s0WcZzmsTB"></li>
+                                <li data-slide-to="1" data-target="#s0WcZzmsTB"></li>
+                                <li data-slide-to="2" data-target="#s0WcZzmsTB"></li>
+                                <li data-slide-to="3" data-target="#s0WcZzmsTB"></li>
                             </ol>
                             <a role="button" href="" class="close" data-dismiss="modal" aria-label="Close">
                             </a>
-                            <a class="carousel-control-prev carousel-control" role="button" data-slide="prev" href="#s0WbLqJZSZ">
+                            <a class="carousel-control-prev carousel-control" role="button" data-slide="prev" href="#s0WcZzmsTB">
                                 <span class="mbri-left mbr-iconfont" aria-hidden="true"></span>
                                 <span class="sr-only">Previous</span>
                             </a>
-                            <a class="carousel-control-next carousel-control" role="button" data-slide="next" href="#s0WbLqJZSZ">
+                            <a class="carousel-control-next carousel-control" role="button" data-slide="next" href="#s0WcZzmsTB">
                                 <span class="mbri-right mbr-iconfont" aria-hidden="true"></span>
                                 <span class="sr-only">Next</span>
                             </a>
