--- a/Rules.html
+++ b/Rules.html
@@ -58,7 +58,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/y">html web templates</a></section><section class="mbr-section content5 cid-rZPEvP50Sv mbr-parallax-background" id="content5-30">
+<section class="engine"><a href="https://mobirise.info/q">responsive website templates</a></section><section class="mbr-section content5 cid-rZPEvP50Sv mbr-parallax-background" id="content5-30">
 
     
 
