--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/t">amp template</a></section><section class="carousel slide cid-rZIhAq0ZDI" data-interval="false" id="slider1-7">
+<section class="engine"><a href="https://mobirise.info/q">responsive web templates</a></section><section class="carousel slide cid-rZIhAq0ZDI" data-interval="false" id="slider1-7">
 
     
 
